# GusChat

./: CMakeLists.txt  README.md  audio.cpp  device.cpp  index.html  main.cpp
GusChat/: GusChat.sln
Project/: GusChat.csproj  GusChat.sln  PatternMessage.cs  Program.cs  Services.cs  appsettings.Development.json  dbclassesconnect.cs  middleware.cs  models.cs  provider.cs
Project/Keys/: private_key.pem  public_key.pem
Project/static/css/: chat.css  index.css  styles.css
Project/static/html/: chat.html  login.html  logout.html  registration.html
Project/static/js/: chat.js  login.js  logout.js  validation.js
Properties/: launchSettings.json
UnitProject/: UnitProject.csproj  UnitTest1.cs
audiointerface/: audio.h  codec.h  device.h
boost/lib/cmake/boost_atomic-1.85.0/: boost_atomic-config.cmake  libboost_atomic-variant-mgw14-mt-s-x32-1_85-static.cmake  libboost_atomic-variant-mgw14-mt-s-x64-1_85-static.cmake  libboost_atomic-variant-mgw14-mt-sd-x32-1_85-static.cmake  libboost_atomic-variant-mgw14-mt-sd-x64-1_85-static.cmake
boost/lib/cmake/boost_charconv-1.85.0/: boost_charconv-config.cmake  libboost_charconv-variant-mgw14-mt-s-x64-1_85-static.cmake  libboost_charconv-variant-mgw14-mt-sd-x64-1_85-static.cmake
boost/lib/cmake/boost_chrono-1.85.0/: boost_chrono-config.cmake  libboost_chrono-variant-mgw14-mt-s-x32-1_85-static.cmake  (+3 more)
css/: chat.css  reg_styles.css  styles.css
html/: chat.html  login.html  registration.html
js/: chat.js  validation.js
networkinterface/: client.h
portaudio/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  cmake_uninstall.cmake
portaudio/cmake/portaudio/: portaudioTargets.cmake
(+189 files in other folders)
