cmake_minimum_required(VERSION 3.10)
project(VOIP)
include_directories(portaudio/include boost/include)
set(CMAKE_PREFIX_PATH boost/lib/cmake/Boost-1.85.0 portaudio/cmake/portaudio)
set(SOURCE_FILES main.cpp device.cpp)
find_path(AVCODEC_INCLUDE_DIR libavcodec/avcodec.h )
find_library(AVCODEC_LIBRARY avcodec)
find_path(AVFORMAT_INCLUDE_DIR libavformat/avformat.h )
find_library(AVFORMAT_LIBRARY avformat)
find_path(AVUTIL_INCLUDE_DIR libavutil/opt.h  libavutil/error.h)
find_library(AVUTIL_LIBRARY avutil)
find_package(portaudio)
find_package(Boost 1.85 REQUIRED COMPONENTS system)
add_executable(VOIP ${SOURCE_FILES})
target_include_directories(VOIP PRIVATE ${AVCODEC_INCLUDE_DIR} ${AVFORMAT_INCLUDE_DIR} ${AVUTIL_INCLUDE_DIR})
target_link_libraries(VOIP portaudio ws2_32 ${AVCODEC_LIBRARY} ${AVFORMAT_LIBRARY} ${AVUTIL_LIBRARY})
add_custom_command(TARGET VOIP POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${CMAKE_SOURCE_DIR}/portaudio/libportaudio.dll $<TARGET_FILE_DIR:VOIP>)